/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2014-02-14 15:05 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
  * source/rtl/hbwinole.c
  * source/rtl/win32ole.prg
    ! fix hidden memory leaks in exceptions service
    Thanks to Claudio Voskian for notifying

  * contrib/libnf/dispc.c
    ! globally visible variables moved to static structure.

2014-01-15 12:10  UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  + contrib/hbmlzo/Makefile
  + contrib/jpeg/Makefile
  + contrib/png/Makefile
  + contrib/tiff/Makefile
    Added missing makefiles

2014-01-11 00:15  UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * contrib/tipssl/client.prg
    source/tip/client.prg
    ! minor fix when nlen <0  and server return no lenght in response
    
2014-01-07 14:10  UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * contrib/rdd_ads/adsfunc.c 
    ! minor fix 
    
2013-12-09 17:16 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * contrib/tipssl/sendmail.prg
    ! minor fix

2013-12-09  16:16  UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * contrib/tipssl/sendmail.prg
    ! minor fix


2013-10-30 23:17 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/rtl/minmax.c
    ! fixed MAX() and MIN() functions to work with datetime

2013-10-17 11:48 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * contrib/hbzlib/zip.c
    ! restored current drive in HB_UNZIPFILE (thanks to Saulius)

2013-10-16 10:15 UTC+0200 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/common/hbdate.c
    ! fixed hb_dateTime() function to return millisecond (thanks to Saulius)

2013-09-13 14:20 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * source/tip/client.prg
    contrib/tipssl/client.prg
     ! minor fix for this morning commit
