@@ -246,3 +246,4 @@ hbrand
 arc4
 hbcom
 hbcomhb
+win_misc
